continued cleaning and added additional automated functions

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "276c24f5",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "a7a5f9ee-ca3a-4ddf-a4f9-45ec6fb99766",
+       "ref": "21dd8183-2290-4dbb-9260-6ba11266493e",
        "rows": [
         [
          "0",
@@ -391,7 +391,7 @@
         ],
         [
          "10",
-         "Mathmatics",
+         "Mathematics",
          "699900",
          "57",
          "43",
@@ -1555,7 +1555,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Mathmatics</td>\n",
+       "      <td>Mathematics</td>\n",
        "      <td>699900</td>\n",
        "      <td>57</td>\n",
        "      <td>43</td>\n",
@@ -2410,7 +2410,7 @@
        "7                                  Civil Engineering                                                       \n",
        "8                             Electrical Engineering                                                       \n",
        "9                             Mechanical Engineering                                                       \n",
-       "10                                         Mathmatics                                                      \n",
+       "10                                        Mathematics                                                      \n",
        "11                                           Biology                                                       \n",
        "12                                         Chemistry                                                       \n",
        "13                                        Psychology                                                       \n",
@@ -2684,36 +2684,45 @@
        "[45 rows x 22 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw = pd.read_excel(\"data/education/original/Tab1_FOD.xlsx\")\n",
+    "## EXPLORATORY/TESTING BLOCK ##\n",
     "\n",
-    "raw"
+    "# raw_edu = pd.read_excel(\"data/education/original/Tab1_FOD.xlsx\") # This variable was created for viewing and analysis purposes to quickly view what needed to be altered from the original file. \n",
+    "# raw_edu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "316ef13c",
+   "metadata": {},
+   "source": [
+    "This is an exploratory block for testing and will contain lines of code that are commented out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "08ae634b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Get_column_names(path_to_excel: str, drop_first_row: bool = False) -> dict:\n",
-    "    headers = pd.read_excel(path_to_excel).head(3)\n",
+    "def get_column_names(df_header: pd.DataFrame, drop_first_row: bool = False) -> dict[str, str]:\n",
+    "    headers = df_header.head(3)\n",
     "    if drop_first_row:\n",
     "        headers = headers.drop(0)\n",
     "\n",
     "    column_names = {}\n",
     "    last_value = ''\n",
+    "    \n",
     "    for column in headers:\n",
     "        first_row_value = headers[column].iloc[0]\n",
     "        if not pd.isna(first_row_value):\n",
-    "            last_value = first_row_value\n",
-    "            last_value = str(last_value).strip()\n",
+    "            last_value = str(first_row_value).strip()\n",
     "\n",
     "        second_row_value = headers[column].iloc[1]\n",
     "        if not pd.isna(second_row_value):\n",
@@ -2724,12 +2733,64 @@
     "            result = last_value\n",
     "        \n",
     "        column_names[column] = result\n",
+    "    \n",
     "    return column_names"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "925d11ce",
+   "metadata": {},
+   "source": [
+    "def Get_column_names(path_to_excel: str, drop_first_row: bool = False) -> dict:\n",
+    "    headers = pd.read_excel(path_to_excel).head(3)\n",
+    "\n",
+    "These two lines of the code block were altered to enable reading and writing to a new (DataFrame) file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "id": "f30be291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edu_fod_file_pairs = [\n",
+    "    (\"Tab1_FOD.xlsx\", \"fod_demo_soc.xlsx\"),\n",
+    "    (\"Tab2_FOD.xlsx\", \"fod_earn_sex.xlsx\"),\n",
+    "    (\"Tab3_FOD.xlsx\", \"fod_earn_age.xlsx\"),\n",
+    "    (\"Tab4_FOD.xlsx\", \"fod_earn_race.xlsx\"),\n",
+    "    (\"Tab5_FOD.xlsx\", \"fod_earn_edu_att.xlsx\"),\n",
+    "    (\"Tab6_FOD.xlsx\", \"fod_metro.xlsx\"),\n",
+    "    (\"Tab7_FOD.xlsx\", \"fod_earn_metro.xlsx\")\n",
+    "]\n",
+    "\n",
+    "# This list of tuples was created to show the input (original) and output (new file) of the data files being renamed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f921f442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edu_fod_delete_first_row = {\n",
+    "    \"Tab1_FOD.xlsx\": True,\n",
+    "    \"Tab2_FOD.xlsx\": False,\n",
+    "    \"Tab3_FOD.xlsx\": False,\n",
+    "    \"Tab4_FOD.xlsx\": False,\n",
+    "    \"Tab5_FOD.xlsx\": False,\n",
+    "    \"Tab6_FOD.xlsx\": True,\n",
+    "    \"Tab7_FOD.xlsx\": True\n",
+    "}\n",
+    "\n",
+    "# This dictionary specifies which tables need the first row dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13f2a31a",
    "metadata": {},
    "outputs": [
@@ -2742,11 +2803,24 @@
       "dict_values(['Field of Degree', 'Total Population_Estimate', 'Total Population_MOE', 'Age 25 to 34_Estimate', 'Age 25 to 34_MOE', 'Age 35 to 44_Estimate', 'Age 35 to 44_MOE', 'Age 45 to 54_Estimate', 'Age 45 to 54_MOE', 'Age 55 to 64_Estimate', 'Age 55 to 64_MOE'])\n",
       "dict_values(['Field of Degree', 'Total Population_Estimate', 'Total Population_MOE', 'White Alone, Non-Hispanic_Estimate', 'White Alone, Non-Hispanic_MOE', 'Black Alone, Non-Hispanic_Estimate', 'Black Alone, Non-Hispanic_MOE', 'Asian Alone, Non-Hispanic_Estimate', 'Asian Alone, Non-Hispanic_MOE', 'Other or Multiple Races, Non-Hispanic_Estimate', 'Other or Multiple Races, Non-Hispanic_MOE', 'Hispanic, of Any Race_Estimate', 'Hispanic, of Any Race_MOE'])\n",
       "dict_values(['Field of Degree', 'Total Population_Estimate', 'Total Population_MOE', \"Bachelor's Degree Only_Estimate\", \"Bachelor's Degree Only_MOE\", 'Advanced Degree_Estimate', 'Advanced Degree_MOE'])\n",
-      "dict_values(['_Select Metropolitan Statistical Areas', '_Total Population', \"Educational Attainment_Less than a Bachelor's Degree\", \"Educational Attainment_All Bachelor's Degree Holders\", 'Science and Engineering Degrees_Computer Science', 'Science and Engineering Degrees_Engineering', 'Science and Engineering Degrees_Civil Engineering', 'Science and Engineering Degrees_Electrical Engineering', 'Science and Engineering Degrees_Mechanical Engineering', 'Science and Engineering Degrees_Mathmatics', 'Science and Engineering Degrees_Biology', 'Science and Engineering Degrees_Chemistry', 'Science and Engineering Degrees_Psychology', 'Science and Engineering Degrees_Economics', 'Science and Engineering Degrees_Political Science', 'Science and Engineering Degrees_Sociology', 'Science and Engineering Degrees_Nursing', 'Science and Engineering Degrees_Other Science and Engineering Degrees2', 'Business Degrees_General Business', 'Business Degrees_Accounting', 'Business Degrees_Business Management and Adminstration', 'Business Degrees_Marketing', 'Business Degrees_Finance', 'Business Degrees_Other Business Degrees', 'Education Degrees_General Education', 'Education Degrees_Elementary Education', 'Education Degrees_Other Education Degrees', 'Arts, Humanities and Other Degrees_Communications', 'Arts, Humanities and Other Degrees_English Language and Literature', 'Arts, Humanities and Other Degrees_Liberal Arts', 'Arts, Humanities and Other Degrees_History', 'Arts, Humanities and Other Degrees_Fine Arts', 'Arts, Humanities and Other Degrees_Commerical Art and Graphic Design', 'Arts, Humanities and Other Degrees_Family and Consumer Sciences', 'Arts, Humanities and Other Degrees_Physical Fitness, Parks, Recreation, and Leisure', 'Arts, Humanities and Other Degrees_Criminal Justice and Fire Protection', 'Arts, Humanities and Other Degrees_Social Work', 'Arts, Humanities and Other Degrees_Other Degrees'])\n",
-      "dict_values(['_Select Metropolitan Statistical Areas', \"Educational Attainment_Less than a Bachelor's Degree\", \"Educational Attainment_Bachelor's Degree or Higher\", 'Science and Engineering Degrees_Computer Science', 'Science and Engineering Degrees_Engineering', 'Science and Engineering Degrees_Civil Engineering', 'Science and Engineering Degrees_Electrical Engineering', 'Science and Engineering Degrees_Mechanical Engineering', 'Science and Engineering Degrees_Mathmatics', 'Science and Engineering Degrees_Biology', 'Science and Engineering Degrees_Chemistry', 'Science and Engineering Degrees_Psychology', 'Science and Engineering Degrees_Economics', 'Science and Engineering Degrees_Political Science', 'Science and Engineering Degrees_Sociology', 'Science and Engineering Degrees_Nursing', 'Science and Engineering Degrees_Other Science and Engineering Degrees2', 'Business Degrees_General Business', 'Business Degrees_Accounting', 'Business Degrees_Business Management and Adminstration', 'Business Degrees_Marketing', 'Business Degrees_Finance', 'Business Degrees_Other Business Degrees', 'Education Degrees_General Education', 'Education Degrees_Elementary Education', 'Education Degrees_Other Education Degrees', 'Arts, Humanities and Other Degrees_Communications', 'Arts, Humanities and Other Degrees_English Language and Literature', 'Arts, Humanities and Other Degrees_Liberal Arts', 'Arts, Humanities and Other Degrees_History', 'Arts, Humanities and Other Degrees_Fine Arts', 'Arts, Humanities and Other Degrees_Commerical Art and Graphic Design', 'Arts, Humanities and Other Degrees_Family and Consumer Sciences', 'Arts, Humanities and Other Degrees_Physical Fitness, Parks, Recreation, and Leisure', 'Arts, Humanities and Other Degrees_Criminal Justice and Fire Protection', 'Arts, Humanities and Other Degrees_Social Work', 'Arts, Humanities and Other Degrees_Other Degrees'])\n"
+      "dict_values(['_Select Metropolitan Statistical Areas', '_Total Population', \"Educational Attainment_Less than a Bachelor's Degree\", \"Educational Attainment_All Bachelor's Degree Holders\", 'Science and Engineering Degrees_Computer Science', 'Science and Engineering Degrees_Engineering', 'Science and Engineering Degrees_Civil Engineering', 'Science and Engineering Degrees_Electrical Engineering', 'Science and Engineering Degrees_Mechanical Engineering', 'Science and Engineering Degrees_Mathematics', 'Science and Engineering Degrees_Biology', 'Science and Engineering Degrees_Chemistry', 'Science and Engineering Degrees_Psychology', 'Science and Engineering Degrees_Economics', 'Science and Engineering Degrees_Political Science', 'Science and Engineering Degrees_Sociology', 'Science and Engineering Degrees_Nursing', 'Science and Engineering Degrees_Other Science and Engineering Degrees2', 'Business Degrees_General Business', 'Business Degrees_Accounting', 'Business Degrees_Business Management and Adminstration', 'Business Degrees_Marketing', 'Business Degrees_Finance', 'Business Degrees_Other Business Degrees', 'Education Degrees_General Education', 'Education Degrees_Elementary Education', 'Education Degrees_Other Education Degrees', 'Arts, Humanities and Other Degrees_Communications', 'Arts, Humanities and Other Degrees_English Language and Literature', 'Arts, Humanities and Other Degrees_Liberal Arts', 'Arts, Humanities and Other Degrees_History', 'Arts, Humanities and Other Degrees_Fine Arts', 'Arts, Humanities and Other Degrees_Commerical Art and Graphic Design', 'Arts, Humanities and Other Degrees_Family and Consumer Sciences', 'Arts, Humanities and Other Degrees_Physical Fitness, Parks, Recreation, and Leisure', 'Arts, Humanities and Other Degrees_Criminal Justice and Fire Protection', 'Arts, Humanities and Other Degrees_Social Work', 'Arts, Humanities and Other Degrees_Other Degrees'])\n",
+      "dict_values(['_Select Metropolitan Statistical Areas', \"Educational Attainment_Less than a Bachelor's Degree\", \"Educational Attainment_Bachelor's Degree or Higher\", 'Science and Engineering Degrees_Computer Science', 'Science and Engineering Degrees_Engineering', 'Science and Engineering Degrees_Civil Engineering', 'Science and Engineering Degrees_Electrical Engineering', 'Science and Engineering Degrees_Mechanical Engineering', 'Science and Engineering Degrees_Mathematics', 'Science and Engineering Degrees_Biology', 'Science and Engineering Degrees_Chemistry', 'Science and Engineering Degrees_Psychology', 'Science and Engineering Degrees_Economics', 'Science and Engineering Degrees_Political Science', 'Science and Engineering Degrees_Sociology', 'Science and Engineering Degrees_Nursing', 'Science and Engineering Degrees_Other Science and Engineering Degrees2', 'Business Degrees_General Business', 'Business Degrees_Accounting', 'Business Degrees_Business Management and Adminstration', 'Business Degrees_Marketing', 'Business Degrees_Finance', 'Business Degrees_Other Business Degrees', 'Education Degrees_General Education', 'Education Degrees_Elementary Education', 'Education Degrees_Other Education Degrees', 'Arts, Humanities and Other Degrees_Communications', 'Arts, Humanities and Other Degrees_English Language and Literature', 'Arts, Humanities and Other Degrees_Liberal Arts', 'Arts, Humanities and Other Degrees_History', 'Arts, Humanities and Other Degrees_Fine Arts', 'Arts, Humanities and Other Degrees_Commerical Art and Graphic Design', 'Arts, Humanities and Other Degrees_Family and Consumer Sciences', 'Arts, Humanities and Other Degrees_Physical Fitness, Parks, Recreation, and Leisure', 'Arts, Humanities and Other Degrees_Criminal Justice and Fire Protection', 'Arts, Humanities and Other Degrees_Social Work', 'Arts, Humanities and Other Degrees_Other Degrees'])\n"
      ]
     }
    ],
+   "source": [
+    "def rename_all_sheets(all_sheets: dict, drop_first_row: bool = False) -> dict[str, pd.DataFrame]:\n",
+    "    renamed_sheets = {}\n",
+    "    for sheet_name, df in all_sheets.items():\n",
+    "        names = get_column_names(df, drop_first_row=drop_first_row)\n",
+    "        renamed_sheets[sheet_name] = df.rename(columns=names)\n",
+    "    return renamed_sheets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90790e66",
+   "metadata": {},
    "source": [
     "delete_first_row = {\n",
     "    1: True,\n",
@@ -2761,14 +2835,76 @@
     "for key, value in delete_first_row.items():\n",
     "    filepath = f\"data/education/original/Tab{key}_FOD.xlsx\"\n",
     "    raw = pd.read_excel(filepath)\n",
-    "    names = Get_column_names(filepath, value)\n",
+    "    names = get_column_names(filepath, value)\n",
     "    raw = raw.rename(columns=names)\n",
-    "    print(names.values())"
+    "    print(names.values())\n",
+    "\n",
+    "This was the original dictionary and code block that read through the original files for analysis purposes before writing. This was altered (removed) to be able to rename all old files, keep changes, and write to new files. The new code is also meant to be universal. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "82cf07e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_excel_file(all_sheets: dict[str, pd.DataFrame], output_file: str):\n",
+    "    with pd.ExcelWriter(output_file) as writer:\n",
+    "        for sheet_name, df in all_sheets.items():\n",
+    "            df.to_excel(writer, sheet_name=sheet_name, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84aa9d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_files(file_pairs: list[tuple[str, str]], delete_first_row: dict[str, bool], input_dir: str, output_dir: str):\n",
+    "    \n",
+    "    for input_name, output_name in file_pairs:\n",
+    "        input_file = f\"{input_dir}/{input_name}\"\n",
+    "        output_file = f\"{output_dir}/{output_name}\"\n",
+    "\n",
+    "        all_sheets = pd.read_excel(input_file, sheet_name=None) # reads all sheets\n",
+    "\n",
+    "        drop_row = delete_first_row.get(input_name, False) # drop_row checker\n",
+    "\n",
+    "        renamed_sheets = rename_all_sheets(all_sheets, drop_first_row=drop_row) # renames all sheets\n",
+    "\n",
+    "        write_excel_file(renamed_sheets, output_file) # writes new file\n",
+    "\n",
+    "        print(f\"Copied {input_name} / {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0a9e155",
+   "metadata": {},
+   "source": [
+    "The above code block processes a file with the changes applied from previous functions and writes/saves a new file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8ce261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process_files(\n",
+    "#     edu_fod_file_pairs,\n",
+    "#     edu_fod_delete_first_row,\n",
+    "#     input_dir=\"data/education/original\",\n",
+    "#     output_dir=\"data/education/renamed\"\n",
+    "# )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "ad725a2a",
    "metadata": {},
    "outputs": [
@@ -2892,14 +3028,6 @@
     "print(df_childcare_map.columns)\n",
     "df_childcare_map.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fea7a57d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
